feat: Add methods for Accounts in te bank
